force-app/main/default/objects/RD_Disc_LeadTime_Product__c/RD_Disc_LeadTime_Product__c.object-meta.xml
<CustomObject>
    <label>RD Disc_LeadTime_Product</label>
    <nameField>
        <label>RD Disc_LeadTime_Product</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Disc_LeadTime_Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>