force-app/main/default/objects/RD_Disc_LeadTime_Product__c/fields/QTYLL__c.field-meta.xml
<CustomField>
    <fullName>QTYLL__c</fullName>
    <label>QTYLL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>