force-app/main/default/objects/RD_Disc_LeadTime_Product__c/fields/QTYUL__c.field-meta.xml
<CustomField>
    <fullName>QTYUL__c</fullName>
    <label>QTYUL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>