force-app/main/default/objects/RD_Disc_LeadTime_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PTC__c</columns>
    <columns>QTYLL__c</columns>
    <columns>QTYUL__c</columns>
    <columns>SZC__c</columns>
    <columns>STC__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>